--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -61,6 +61,7 @@ steps:
       targetType: "inline"
       script: "./node_modules/cypress/bin/cypress run"
       errorActionPreference: "continue"
+    displayName: "run Cypress tests"
 
   # build product and publish artifact
   - script: |
