--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -67,6 +67,7 @@ steps:
     inputs:
       testResultsFormat: "JUnit"
       testResultsFiles: "**/TEST-*.xml"
+    enabled: true
     displayName: "publish Cypress tests"
 
   # build product and publish artifact
