--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "cypress": "npx cypress open",
+    "report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters"
   },
   "private": true,
   "dependencies": {
@@ -76,6 +78,8 @@
     "cross-var": "~1.1.0",
     "cypress": "^10.3.0",
     "cypress-file-upload": "^5.0.8",
+    "cypress-mochawesome-reporter": "^3.2.0",
+    "cypress-multi-reporters": "^1.6.1",
     "jasmine": "~4.1.0",
     "jasmine-core": "~4.1.1",
     "jasmine-spec-reporter": "~7.0.0",
@@ -88,6 +92,11 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.34",
+    "mocha": "^10.0.0",
+    "mocha-junit-reporter": "^2.0.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0",
     "ng-packagr": "~13.3.1",
     "puppeteer": "~14.2.0",
     "ts-node": "~9.1.1",
