--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -78,6 +78,14 @@ steps:
     failOnStderr: false
     displayName: "build koia product"
 
+  - task: PowerShell@2
+    inputs:
+      targetType: 'inline'
+      script: |
+        Write-Host "Show all folder content"
+        Get-ChildItem -Path $(Agent.WorkFolder)\*.* -Recurse -Force
+    displayName: "Show all folder content"
+
   - task: PublishPipelineArtifact@0
     inputs:
       artifactName: "koiadist"
