--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -71,20 +71,19 @@ steps:
       mergeTestResults: true
     enabled: true
     displayName: "publish Cypress tests"
-
-  # build product and publish artifact
-  - script: |
-      npx ng build --prod
-    failOnStderr: false
-    displayName: "build koia product"
-
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
       script: |
         Write-Host "Show all folder content"
-        Get-ChildItem -Path -Name $(Agent.WorkFolder)\*.* -Recurse -Force
+        Get-ChildItem -Name $(Agent.WorkFolder)\*.* -Recurse -Force
     displayName: "Show all folder content"
+     
+  # build product and publish artifact
+  - script: |
+      npx ng build --prod
+    failOnStderr: false
+    displayName: "build koia product"
 
   - task: PublishPipelineArtifact@0
     inputs:
